@@ -1,3 +1,7 @@
+Mon Feb 17 13:58:45 1997  Richard Basch  <basch@lehman.com>
+
+	* win-mac.h: Added KRB4 Windows INI related definitions.
+
 Sat Feb  8 15:01:33 1997  Richard Basch  <basch@lehman.com>
 
 	* krb5.hin: Export krb5_get_credentials_{renew,validate} (win32)
